--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header id="indexheader">
   <h1 id="introtext">Hi! I'm Isabelle. I'm a rising high school senior, and I am working on learning more about the field of web development.</h1>
-  <img src="photos/profile.jpg" alt="Image of a powerpuff girl with brown hair, a cat, and a yellow background." id="profile">
+  <img src="profile.jpg" alt="Image of a powerpuff girl with brown hair, a cat, and a yellow background." id="profile">
 </header>
 <nav>
   <div>  
